--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -234,46 +234,46 @@ label {
   display: flex;
 }
 
-#auth {
+.auth {
   background-color: #08182b;
   background-image: url("../images/bg.svg");
 }
-#auth header {
+.auth header {
   justify-content: center;
   align-items: center;
   height: 180px;
 }
-#auth header a {
+.auth header a {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-#auth header a #logo-icon {
+.auth header a #logo-icon {
   width: 100px;
   height: 127px;
 }
-#auth header a #logo-text {
+.auth header a #logo-text {
   margin-top: var(--space);
   width: 220px;
   height: 60px;
 }
 @media (min-width: 768px) {
-  #auth header a {
+  .auth header a {
     flex-direction: row;
   }
-  #auth header a #logo-icon {
+  .auth header a #logo-icon {
     width: initial;
   }
-  #auth header a #logo-text {
+  .auth header a #logo-text {
     margin-left: var(--space);
     width: initial;
   }
 }
-#auth main {
+.auth main {
   align-items: center;
 }
-#auth #form-tabs {
+.auth #form-tabs {
   margin: 0;
   padding: 0;
   background-color: #202f3f;
@@ -284,7 +284,7 @@ label {
   list-style: none;
   width: 100%;
 }
-#auth #form-tabs li {
+.auth #form-tabs li {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -298,17 +298,17 @@ label {
   font-size: 22px;
   cursor: pointer;
 }
-#auth #form-tabs li:hover {
+.auth #form-tabs li:hover {
   background-color: rgba(31, 59, 229, 0.5);
 }
-#auth #form-tabs li.active {
+.auth #form-tabs li.active {
   background-color: var(--primary);
   cursor: default;
 }
-#auth #form-tabs li {
+.auth #form-tabs li {
   width: 175px;
 }
-#auth #form-tabs a {
+.auth #form-tabs a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -316,7 +316,7 @@ label {
   text-decoration: none;
   color: var(--dark);
 }
-#auth #login-facebook {
+.auth #login-facebook {
   background-color: #101d1d;
   border: none;
   border-radius: var(--radius);
@@ -335,36 +335,41 @@ label {
   background-color: #4e6cab;
   margin-top: 20px;
 }
-#auth #login-facebook:hover {
+.auth #login-facebook:hover {
   background-color: #142626;
   box-shadow: 0 0 10px var(--primary);
 }
-#auth #login-facebook:active {
+.auth #login-facebook:active {
   background-color: var(--light);
   color: var(--dark);
   transition-duration: 0.05s;
   box-shadow: 0 0 5px var(--primary);
 }
-#auth #login-facebook:disabled {
+.auth #login-facebook:disabled {
   background-color: var(--light);
   cursor: progress;
 }
-#auth #login-facebook:hover, #auth #login-facebook:active {
+.auth #login-facebook:hover, .auth #login-facebook:active {
   background-color: #314776;
 }
-#auth #login-facebook svg {
+.auth #login-facebook svg {
   width: 30px;
   height: 30px;
   margin-right: 10px;
 }
-#auth form {
+.auth form {
   background-color: var(--primary);
   padding: var(--space);
   border-bottom-left-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
   width: 350px;
 }
-#auth form input {
+.auth form label {
+  margin-top: 12px;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.auth form input {
   height: 50px;
   border-radius: var(--radius);
   border: none;
@@ -372,13 +377,13 @@ label {
   padding: var(--space);
   outline: none;
 }
-#auth form input:focus {
+.auth form input:focus {
   background-color: rgba(255, 255, 255, 0.9);
 }
-#auth form input + input {
+.auth form input + input {
   margin-top: var(--space);
 }
-#auth form form {
+.auth form form {
   background-color: var(--primary);
   padding: var(--space);
   padding-top: 5rem;
@@ -386,7 +391,7 @@ label {
   border-bottom-right-radius: var(--radius);
   width: 350px;
 }
-#auth form form input {
+.auth form form input {
   height: 50px;
   border-radius: var(--radius);
   border: none;
@@ -394,16 +399,16 @@ label {
   padding: var(--space);
   outline: none;
 }
-#auth form form input:focus {
+.auth form form input:focus {
   background-color: rgba(255, 255, 255, 0.9);
 }
-#auth form form input + input {
+.auth form form input + input {
   margin-top: var(--space);
 }
-#auth form form label + label {
+.auth form form label + label {
   margin-top: var(--space);
 }
-#auth form form footer {
+.auth form form footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -412,11 +417,11 @@ label {
   position: relative;
   min-height: var(--space);
 }
-#auth form form footer a {
+.auth form form footer a {
   color: var(--white);
   font-size: 14px;
 }
-#auth form form footer button {
+.auth form form footer button {
   background-color: #101d1d;
   border: none;
   border-radius: var(--radius);
@@ -431,21 +436,21 @@ label {
   letter-spacing: 0.5px;
   font-weight: bold;
 }
-#auth form form footer button:hover {
+.auth form form footer button:hover {
   background-color: #142626;
   box-shadow: 0 0 10px var(--primary);
 }
-#auth form form footer button:active {
+.auth form form footer button:active {
   background-color: var(--light);
   color: var(--dark);
   transition-duration: 0.05s;
   box-shadow: 0 0 5px var(--primary);
 }
-#auth form form footer button:disabled {
+.auth form form footer button:disabled {
   background-color: var(--light);
   cursor: progress;
 }
-#auth form footer {
+.auth form footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -454,11 +459,11 @@ label {
   position: relative;
   min-height: var(--space);
 }
-#auth form footer a {
+.auth form footer a {
   color: var(--white);
   font-size: 14px;
 }
-#auth form footer button {
+.auth form footer button {
   background-color: #101d1d;
   border: none;
   border-radius: var(--radius);
@@ -473,17 +478,17 @@ label {
   letter-spacing: 0.5px;
   font-weight: bold;
 }
-#auth form footer button:hover {
+.auth form footer button:hover {
   background-color: #142626;
   box-shadow: 0 0 10px var(--primary);
 }
-#auth form footer button:active {
+.auth form footer button:active {
   background-color: var(--light);
   color: var(--dark);
   transition-duration: 0.05s;
   box-shadow: 0 0 5px var(--primary);
 }
-#auth form footer button:disabled {
+.auth form footer button:disabled {
   background-color: var(--light);
   cursor: progress;
 }
@@ -1068,6 +1073,37 @@ label {
   }
 }
 
+#admin > header #userName {
+  color: var(--white);
+  font-size: 20px;
+  z-index: 3;
+  position: absolute;
+  top: 30px;
+  right: 45px;
+  text-align: right;
+  text-transform: uppercase;
+  background-color: var(--primary);
+  padding: 5px 10px;
+  padding-right: 40px;
+  border-radius: 5px;
+  min-height: 34px;
+}
+#admin > header #avatar {
+  position: absolute;
+  top: var(--space);
+  right: var(--space);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+  cursor: pointer;
+  z-index: 3;
+}
+#admin > header #avatar:hover {
+  opacity: 0.8;
+  filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.5));
+}
+
 #list-orders {
   margin: 0;
   padding: 0;
@@ -1183,17 +1219,17 @@ label {
   }
 }
 
-#auth #form-update #photo-preview {
+.auth #form-update #photo-preview {
   margin-top: var(--space);
   margin-left: calc(50% - 75px);
   width: 150px;
   height: 150px;
   border-radius: 50%;
 }
-#auth #form-update #file {
+.auth #form-update #file {
   display: none;
 }
-#auth #form-update .choose-photo {
+.auth #form-update .choose-photo {
   margin-top: var(--space);
   background-color: #101d1d;
   border: none;
@@ -1209,21 +1245,21 @@ label {
   letter-spacing: 0.5px;
   font-weight: bold;
 }
-#auth #form-update .choose-photo:hover {
+.auth #form-update .choose-photo:hover {
   background-color: #142626;
   box-shadow: 0 0 10px var(--primary);
 }
-#auth #form-update .choose-photo:active {
+.auth #form-update .choose-photo:active {
   background-color: var(--light);
   color: var(--dark);
   transition-duration: 0.05s;
   box-shadow: 0 0 5px var(--primary);
 }
-#auth #form-update .choose-photo:disabled {
+.auth #form-update .choose-photo:disabled {
   background-color: var(--light);
   cursor: progress;
 }
-#auth #form-update.cropping img {
+.auth #form-update.cropping img {
   height: auto;
   border-radius: 0;
   margin-top: 0;
