--- a/public/assets/sass/_auth.scss
+++ b/public/assets/sass/_auth.scss
@@ -1,7 +1,7 @@
 @use "components";
 @use "colors";
 
-#auth {
+.auth {
   background-color: colors.$bgLogin;
   background-image: url("../images/bg.svg");
   header {
@@ -47,6 +47,11 @@
     border-bottom-left-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
     width: 350px;
+    label {
+      margin-top: 12px;
+      margin-bottom: 5px;
+      font-size: 14px;
+    }
     input {
       @include components.input;
     }
