--- a/public/assets/sass/_userUpdate.scss
+++ b/public/assets/sass/_userUpdate.scss
@@ -6,6 +6,7 @@
 @use "sass:color";
 
 .auth {
+
   #form-update {
     #photo-preview {
       margin-top: var(--space);
@@ -14,6 +15,8 @@
       height: 150px;
       border-radius: 50%;
     }
+  }
+  #form-update, #form-product {
     #file {
       display: none;
     }
