--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -45,7 +45,7 @@ $secondary: rgba(#A1EB73, .7); */
 body {
   margin: 0;
   background-color: var(--dark);
-  color: var(--white);
+  color: black;
 }
 
 body,
@@ -245,13 +245,12 @@ label {
 }
 .auth header a {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
 .auth header a #logo-icon {
   width: 100px;
-  height: 127px;
 }
 .auth header a #logo-text {
   margin-top: var(--space);
@@ -383,6 +382,11 @@ label {
 .auth form input + input {
   margin-top: var(--space);
 }
+.auth form input[type=color] {
+  padding: 0;
+  height: revert;
+  border-radius: initial;
+}
 .auth form form {
   background-color: var(--primary);
   padding: var(--space);
@@ -404,6 +408,11 @@ label {
 }
 .auth form form input + input {
   margin-top: var(--space);
+}
+.auth form form input[type=color] {
+  padding: 0;
+  height: revert;
+  border-radius: initial;
 }
 .auth form form label + label {
   margin-top: var(--space);
@@ -493,6 +502,33 @@ label {
   cursor: progress;
 }
 
+#app #loading {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+#app.loading {
+  background-color: white;
+}
+#app.loading #loading {
+  height: 100vh;
+  width: 100vw;
+  opacity: 1;
+  overflow: hidden;
+  transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+#app.loading #loading span {
+  font-size: 40px;
+  font-weight: bold;
+}
+#app.loading > section, #app.loading > footer, #app.loading > main, #app.loading > aside {
+  display: none;
+}
 #app.no-footer > section main {
   padding-bottom: 0;
 }
@@ -503,53 +539,57 @@ label {
   flex: 1;
 }
 #app > section > header {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  height: 180px;
+  align-items: stretch;
+  background-color: #1f2525;
+  color: white;
   width: 100%;
   position: relative;
+  box-shadow: 1px 3px 9px -1px black;
 }
-#app > section > header a {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#app > section > header a #logo-icon {
+#app > section > header #logo-icon {
   width: 100px;
-  height: 127px;
 }
-#app > section > header a #logo-text {
+#app > section > header #logo-text {
   margin-top: var(--space);
   width: 220px;
   height: 60px;
 }
 @media (min-width: 768px) {
-  #app > section > header a {
+  #app > section > header {
     flex-direction: row;
   }
-  #app > section > header a #logo-icon {
+  #app > section > header #logo-icon {
     width: initial;
   }
-  #app > section > header a #logo-text {
+  #app > section > header #logo-text {
     margin-left: var(--space);
     width: initial;
   }
 }
-#app > section > header::before {
-  position: absolute;
-  top: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-position: top center;
-  background-image: linear-gradient(180deg, rgba(7, 13, 13, 0.5) 50.52%, #070d0d 100%), url("../images/photo-blue.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: brightness(0.8);
+#app > section > header #company {
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+}
+#app > section > header #company h1 {
+  font-weight: 500;
+  font-size: 30px;
+  margin: 0;
+  text-align: center;
+  line-height: 1;
+}
+#app > section > header #company h1 span {
+  color: var(--primary);
+  font-weight: bold;
 }
 #app > section > header a {
   position: relative;
+  display: flex;
 }
 #app > section > header #userName {
   color: var(--white);
@@ -586,16 +626,16 @@ label {
   width: 100%;
 }
 #app > section main > header {
-  background-color: var(--white10);
-  height: 60px;
   justify-content: center;
   align-items: center;
   width: 100%;
 }
 #app > section main > header h1 {
-  font-weight: 100;
-  font-size: 32px;
+  font-weight: 500;
+  font-size: 30px;
   margin: 0;
+  text-align: center;
+  line-height: 1;
 }
 #app > section main > header h1 span {
   color: var(--primary);
@@ -633,9 +673,7 @@ label {
   cursor: progress;
 }
 #app > section main > section {
-  overflow: auto;
-  min-height: 200px;
-  max-height: calc(100vh - 304px);
+  padding-bottom: 100px;
 }
 #app > section main > section::-webkit-scrollbar {
   width: 10px;
@@ -671,6 +709,48 @@ label {
 #app > section main .category ul {
   margin-top: var(--space);
   color: rgba(27, 154, 246, 0.7);
+}
+#app > section main .category ul li {
+  background-color: var(--white);
+  border: 3px solid white;
+  border-radius: 20px;
+  flex-direction: row;
+  display: flex;
+  color: var(--dark);
+  overflow: hidden;
+  box-shadow: 1px 1px 16px -2px black;
+  margin-bottom: 25px;
+}
+#app > section main .category ul li:hover, #app > section main .category ul li:active {
+  border: 3px solid #e8e8e8;
+  background-color: #e8e8e8;
+  cursor: pointer;
+}
+#app > section main .category ul li .image-product {
+  width: 33%;
+}
+#app > section main .category ul li .options-product {
+  width: 15%;
+}
+#app > section main .category ul li .options-product > button {
+  flex: 1;
+  outline: none;
+  border: none;
+}
+#app > section main .category ul li .options-product > input {
+  flex: 1;
+  margin: 5px 0;
+  text-align: center;
+}
+#app > section main .category ul li .content-product {
+  align-items: center;
+  justify-content: space-around;
+  padding: 3px 7px;
+  flex: 1;
+}
+#app > section main .category ul li .content-product > h3 {
+  margin: 0;
+  text-align: center;
 }
 #app > section main .category ul label {
   flex-direction: row;
@@ -1135,51 +1215,50 @@ label {
   filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.5));
 }
 
-#list-products, #products {
+#list-products {
   margin: 0;
   padding: 0;
   list-style: none;
   padding: var(--space);
-  overflow: auto;
 }
-#list-products::-webkit-scrollbar, #products::-webkit-scrollbar {
+#list-products::-webkit-scrollbar {
   width: 10px;
 }
-#list-products::-webkit-scrollbar-track, #products::-webkit-scrollbar-track {
+#list-products::-webkit-scrollbar-track {
   background: #070d0d;
 }
-#list-products::-webkit-scrollbar-thumb, #products::-webkit-scrollbar-thumb {
+#list-products::-webkit-scrollbar-thumb {
   background: rgba(31, 59, 229, 0.25);
 }
-#list-products:hover::-webkit-scrollbar-thumb, #products:hover::-webkit-scrollbar-thumb {
+#list-products:hover::-webkit-scrollbar-thumb {
   background: rgba(31, 59, 229, 0.5);
 }
-#list-products:hover::-webkit-scrollbar-thumb:hover, #products:hover::-webkit-scrollbar-thumb:hover {
+#list-products:hover::-webkit-scrollbar-thumb:hover {
   background: rgba(31, 59, 229, 0.75);
 }
-#list-products:hover::-webkit-scrollbar-thumb:active, #products:hover::-webkit-scrollbar-thumb:active {
+#list-products:hover::-webkit-scrollbar-thumb:active {
   background: #1f3be5;
 }
-#list-products > li, #products > li {
+#list-products > li {
   background-color: var(--white);
   border-radius: var(--radius);
   flex-direction: row;
   display: flex;
   color: var(--dark);
 }
-#list-products > li > div, #products > li > div {
+#list-products > li > div {
   padding: 10px;
 }
-#list-products > li .id, #products > li .id {
+#list-products > li .id {
   width: 25%;
   max-width: 200px;
   min-width: 150px;
 }
-#list-products > li .content, #products > li .content {
+#list-products > li .content {
   flex: 1;
   font-size: 14px;
 }
-#list-products > li .content .title, #products > li .content .title {
+#list-products > li .content .title {
   background-color: var(--primary);
   color: var(--white);
   font-weight: bold;
@@ -1187,24 +1266,24 @@ label {
   text-align: center;
   text-transform: uppercase;
 }
-#list-products > li .content ul, #products > li .content ul {
+#list-products > li .content ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-#list-products > li .content ul li, #products > li .content ul li {
+#list-products > li .content ul li {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 32px;
   align-items: center;
 }
-#list-products > li .actions, #products > li .actions {
+#list-products > li .actions {
   justify-content: center;
   border-left: var(--dark) 1px dashed;
   margin-left: 10px;
 }
-#list-products > li .actions button, #products > li .actions button {
+#list-products > li .actions button {
   width: 40px;
   height: 40px;
   background: none;
@@ -1212,37 +1291,37 @@ label {
   outline: none;
   cursor: pointer;
 }
-#list-products > li .actions button:hover, #products > li .actions button:hover {
+#list-products > li .actions button:hover {
   opacity: 0.75;
   background-color: var(--gray);
 }
-#list-products > li .actions button:active, #products > li .actions button:active {
+#list-products > li .actions button:active {
   opacity: 1;
   background-color: var(--primary);
 }
-#list-products > li .actions button:active path, #products > li .actions button:active path {
+#list-products > li .actions button:active path {
   fill: var(--primaryText);
 }
-#list-products > li + li, #products > li + li {
+#list-products > li + li {
   margin-top: var(--space);
 }
 @media (min-width: 768px) {
-  #list-products, #products {
+  #list-products {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: var(--space);
   }
-  #list-products > li + li, #products > li + li {
+  #list-products > li + li {
     margin-top: 0;
   }
 }
 @media (min-width: 1152px) {
-  #list-products, #products {
+  #list-products {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (min-width: 1536px) {
-  #list-products, #products {
+  #list-products {
     grid-template-columns: repeat(4, 1fr);
   }
 }
