--- a/public/assets/sass/_components.scss
+++ b/public/assets/sass/_components.scss
@@ -27,14 +27,14 @@
 }
 
 @mixin horizontalTitle {
-  background-color: var(--white10);
-  height: 60px;
   justify-content: center;
   align-items: center;
   h1 {
-    font-weight: 100;
-    font-size: 32px;
+    font-weight: 500;
+    font-size: 30px;
     margin: 0;
+    text-align: center;
+    line-height: 1;
     span {
       color: var(--primary);
       font-weight: bold;
@@ -67,12 +67,11 @@
 
 @mixin logo {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   #logo-icon {
     width: 100px;
-    height: 127px;
   }
   #logo-text {
     margin-top: var(--space);
@@ -142,6 +141,11 @@
   }
   + input {
     margin-top: var(--space);
+  }
+  &[type=color] {
+    padding: 0;
+    height: revert;
+    border-radius: initial;
   }
 }
 
