--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -12,9 +12,9 @@
     overflow: hidden;
     opacity: 0;
     display: flex;
-      align-items: center;
-      justify-content: center;
-    transition: height .5s ease-in-out, opacity .5s ease-in-out;
+    align-items: center;
+    justify-content: center;
+    transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
   }
   &.loading {
     background-color: white;
@@ -23,13 +23,16 @@
       width: 100vw;
       opacity: 1;
       overflow: hidden;
-      transition: height .5s ease-in-out, opacity .5s ease-in-out;
+      transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
       span {
         font-size: 40px;
         font-weight: bold;
       }
     }
-    > section, > footer, > main, > aside {
+    > section,
+    > footer,
+    > main,
+    > aside {
       display: none;
     }
   }
@@ -142,6 +145,7 @@
           margin-top: var(--space);
           color: rgba(colors.$secondary, 0.7);
           li {
+            position: relative;
             background-color: var(--white);
             border: 3px solid white;
             border-radius: 20px;
@@ -150,21 +154,40 @@
             color: var(--dark);
             overflow: hidden;
             box-shadow: 1px 1px 16px -2px black;
+            margin: 0 auto;
             margin-bottom: 25px;
-            &:hover, &:active {
+            max-width: 400px;
+            &:hover,
+            &:active {
               border: 3px solid #e8e8e8;
-              background-color:#e8e8e8;
+              background-color: #e8e8e8;
               cursor: pointer;
             }
+            > .content {
+              display: flex;
+              flex: 1;
+              flex-direction: row;
+            }
             .image-product {
-              width: 33%;
+              width: 40%;
             }
             .options-product {
               width: 15%;
+              justify-content: flex-end;
+              position: absolute;
+              height: 80%;
+              bottom: 0;
+              right: 0;
               > button {
                 flex: 1;
                 outline: none;
                 border: none;
+                max-height: 50%;
+                border-top-left-radius: 20px;
+                cursor: pointer;
+                &:hover {
+                  filter: grayscale(0.5);
+                }
               }
               > input {
                 flex: 1;
@@ -172,7 +195,7 @@
                 text-align: center;
               }
             }
-            .content-product {
+            .data-product {
               align-items: center;
               justify-content: space-around;
               padding: 3px 7px;
