--- a/public/assets/sass/_components.scss
+++ b/public/assets/sass/_components.scss
@@ -8,7 +8,8 @@
     width: 10px;
   }
   &::-webkit-scrollbar-track {
-    background: colors.$dark;
+    background: colors.$white;
+    margin: 10px 0;
   }
   &::-webkit-scrollbar-thumb {
     background: rgba(colors.$primary, 0.25);
