--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -54,6 +54,34 @@ label {
 
 #modal {
   display: none;
+  form {
+    width: 100%;
+    padding: 10px;
+    padding-bottom: 90px;
+    overflow: auto;
+    @include components.scrollbar;
+  }
+  footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px 0;
+    border-top: 1px solid #00000050;
+    margin-top: 10px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: #dadada;
+    button {
+      @include components.button;
+      &.close {
+        background-color: #cccccc90;
+        color: #000;
+      }
+    }
+  }
   > div {
     position: fixed;
     top: 0;
