--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -181,11 +181,11 @@ label {
   width: 90%;
   background-color: #fff;
   border-radius: 10px;
-  padding: 1rem;
+  padding: 1rem 0;
   color: #000;
   min-height: 12rem;
   max-height: 90vh;
-  max-width: 600px;
+  max-width: 350px;
   position: relative;
   overflow: hidden;
 }
@@ -347,7 +347,7 @@ label {
     flex-direction: row;
   }
   .auth header a #logo-icon {
-    width: initial;
+    width: 100px;
   }
   .auth header a #logo-text {
     margin-left: var(--space);
@@ -775,7 +775,7 @@ label {
     flex-direction: row;
   }
   #app > section > header #logo-icon {
-    width: initial;
+    width: 100px;
   }
   #app > section > header #logo-text {
     margin-left: var(--space);
@@ -947,6 +947,7 @@ label {
   display: flex;
   flex: 1;
   flex-direction: row;
+  z-index: 1;
 }
 #app > section main .category ul li .image-product {
   width: 40%;
