--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -167,6 +167,7 @@
               display: flex;
               flex: 1;
               flex-direction: row;
+              z-index: 1;
             }
             .image-product {
               width: 40%;
