--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -106,11 +106,11 @@ label {
       width: 90%;
       background-color: #fff;
       border-radius: 10px;
-      padding: 1rem;
+      padding: 1rem 0;
       color: #000;
       min-height: 12rem;
       max-height: 90vh;
-      max-width: 600px;
+      max-width: 350px;
       position: relative;
       overflow: hidden;
       img.close {
