--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -760,7 +760,7 @@ label {
   color: white;
   width: 100%;
   position: relative;
-  box-shadow: 1px 3px 9px -1px black;
+  box-shadow: 1px 3px 9px -1px #00000087;
 }
 #app > section > header #logo-icon {
   width: 100px;
@@ -933,7 +933,7 @@ label {
   display: flex;
   color: var(--dark);
   overflow: hidden;
-  box-shadow: 1px 1px 16px -2px black;
+  box-shadow: 1px 1px 16px -2px #00000052;
   margin: 0 auto;
   margin-bottom: 25px;
   max-width: 400px;
@@ -985,6 +985,9 @@ label {
 #app > section main .category ul li .data-product > h3 {
   margin: 0;
   text-align: center;
+}
+#app > section main .category ul li .data-product > span {
+  font-size: 20px;
 }
 #app > section main .category ul label {
   flex-direction: row;
@@ -1178,6 +1181,8 @@ label {
   background-color: var(--white);
   color: var(--dark);
   height: 64px;
+  z-index: 2;
+  transition: height 0.3s ease-in-out;
 }
 #app aside header {
   flex-direction: row;
@@ -1215,7 +1220,8 @@ label {
 }
 #app aside section {
   height: 0;
-  overflow: hidden;
+  overflow: auto;
+  transition: height 0.3s ease-in-out;
 }
 #app aside section ul {
   margin: 0;
@@ -1349,7 +1355,7 @@ label {
   }
 }
 #app aside.open {
-  height: calc(100vh - 350px);
+  height: calc(100vh - 100px);
 }
 #app aside.open header,
 #app aside.open section {
@@ -1368,7 +1374,7 @@ label {
   font-size: 24px;
 }
 #app aside.open section {
-  height: calc(100vh - 518px);
+  height: calc(100vh - 268px);
 }
 @media (min-width: 768px) {
   #app aside.open section {
