--- a/public/assets/sass/_list-orders.scss
+++ b/public/assets/sass/_list-orders.scss
@@ -12,6 +12,7 @@
     flex-direction: row;
     display: flex;
     color: var(--dark);
+    box-shadow: 1px 1px 16px -2px #00000052;
     > div {
       padding: 10px;
     }
@@ -46,6 +47,13 @@
       justify-content: center;
       border-left: var(--dark) 1px dashed;
       margin-left: 10px;
+      a {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       button {
         width: 40px;
         height: 40px;
