--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -121,7 +121,47 @@ label {
         cursor: pointer;
       }
       .image-prod-modal {
-        width: 250px;
+        width: 100%;
+      }
+      .description-prod {
+        margin: 10px 0;
+        padding: 10px;
+      }
+      .price-prod {
+        text-align-last: center;
+        font-size: 20px;
+        margin-bottom: 15px;
+      }
+      .options-product {
+        > div {
+          background: #eaeaea;
+          padding: 10px;
+          margin: 5px 0 0;
+          ul {
+            margin: 10px 0;
+            padding: 5px;
+            li {
+              list-style: none;
+              display: flex;
+              margin-bottom: 5px;
+              label {
+                display: flex;
+                flex: 1;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-left: 5px;
+              }
+            }
+          }
+          h4 {
+            margin: 0;
+            font-size: 18px;
+          }
+          > span {
+            font-size: 12px;
+            padding-left: 5px;
+          }
+        }
       }
       h3 {
         margin: 0;
