--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -44,6 +44,9 @@
   #privacity {
     padding: 20px;
   }
+  #payment {
+    padding-bottom: 40px;
+  }
   > section {
     flex: 1;
     &#payment {
@@ -372,7 +375,7 @@
       overflow: hidden;
       position: absolute;
       padding: 16px;
-      width: calc(100% - 204px);
+      width: calc(100% - 190px);
       cursor: pointer;
       svg {
         height: 32px;
@@ -405,7 +408,14 @@
       transition: height .3s ease-in-out;
       ul {
         @include mixins.reset-list;
-        li {
+        details {
+          > div {
+            background-color: #e3e3e342;
+            padding: 5px 15px;
+            color: #a1a1a1;
+          }
+        }
+        summary {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
@@ -521,6 +531,21 @@
           flex-direction: row;
           svg {
             margin-right: 10px;
+          }
+        }
+      }
+      &.payment {
+        .price {
+          width: 90px;
+          font-size: 18px;
+          padding: 0 10px;
+        }
+        button {
+          width: 120px;
+          background-color: #49c958;
+          img {
+            width: 20px;
+            margin: 5px;
           }
         }
       }
