--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -132,6 +132,20 @@ label {
         font-size: 20px;
         margin-bottom: 15px;
       }
+      .comments-wrapper {
+        padding: 10px;
+        margin: 5px 0 0;
+        label {
+          font-weight: bold;
+        }
+        > textarea {
+          border-radius: var(--radius);
+          border: 1px solid #cccc;
+          font-size: 14px;
+          padding: 5px;
+          outline: none;
+        }
+      }
       .options-product {
         > div {
           background: #eaeaea;
